--- a/src/app/dashboard/pages/minute/minute.component.css
+++ b/src/app/dashboard/pages/minute/minute.component.css
@@ -1,61 +1,90 @@
-.content {
-  display: flex;
-  margin: 20px 60px 20px 60px;
-  justify-content: space-between;
+.layout {
+  background: #fff;
+  border-radius: 20px;
+  padding: 10px;
 }
 
-.content .left-side {
-  width: 25%;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: space-evenly;
-}
-
-.content .left-side {
-  border-right: 2px solid grey;
-}
-
-.content .left-side .detail {
-  margin: 14px;
-  text-align: center;
-}
-
-.content .left-side .detail i {
-  font-size: 30px;
-  color: #695cfe;
-}
-
-.content .left-side .detail .topic {
-  font-size: 18px;
-  font-weight: 500;
-  margin-bottom: 30px;
-}
-
-.content .right-side {
-  width: 75%;
-  margin-left: 75px;
-}
-
-.right-side .input-box {
-  height: 50px;
-  width: 100%;
-  margin: 12px;
-}
-
-.right-side .input-box input,
-.right-side .input-box textarea {
-  height: 100%;
-  width: 100%;
+input,
+select,
+textarea {
+  background-color: #eee;
   border: none;
-  border-radius: 6px;
-  background: #f0f1f8;
-  font-size: 16px;
-  padding: 0 15px;
-  resize: none;
+  padding: 10px 15px;
+  font-size: 13px;
+  border-radius: 8px;
+  width: 100%;
+  outline: none;
 }
 
-.right-side .input-box .message-box {
-  min-height: 110px;
-  height: 100%;
+.item {
+  display: flex;
+  gap: 10px;
+  width: 100%;
+}
+
+.item .field {
+  width: 100%;
+  margin: 5px;
+}
+
+.buttons {
+  display: flex;
+  width: 100%;
+  gap: 10px;
+  padding: 10px;
+  justify-content: space-around;
+}
+
+.buttons button {
+  color: #fff;
+  font-size: 12px;
+  padding: 10px 45px;
+  border: 1px solid transparent;
+  border-radius: 8px;
+  font-weight: 600;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
+  margin-top: 10px;
+  cursor: pointer;
+}
+
+.buttons button:hover {
+  box-shadow: 1px 1px 1px 1px #f3f3f3;
+}
+
+.buttons .send {
+  background-color: #695cfe;
+}
+
+.buttons .cancel {
+  background-color: #dc3546;
+}
+
+.buttons .save {
+  background-color: #218754;
+}
+
+canvas {
+  background-color: #f3f3f3;
+  border-radius: 5px;
+  width: 68%;
+}
+
+.photo {
+  background-color: #f3f3f3;
+  color: #707070;
+  font-size: 12px;
+  padding: 10px 45px;
+  border: 1px solid transparent;
+  border-radius: 8px;
+  font-weight: 600;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
+  margin-top: 10px;
+  border: 1px solid;
+  cursor: pointer;
+}
+
+.photo {
+  padding: 20px;
 }
